documentacion/obtenida/ARINC 429/driver and software/PC-SSB-1/WIN95/PS1W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef char CHAR;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

/**
*
*  PC-SSB-1 Driver functions.
*
**/

PS1W32API ERRVAL __stdcall SSBT_CardClose(HCARD handleval);

PS1W32API HCARD __stdcall SSBT_CardOpen(INT memval,INT ioval,INT irqval);


PS1W32API LPSTR __stdcall SSBT_AsciiCat(LPSTR strdest,LPCSTR strsrc);

PS1W32API INT __stdcall SSBT_AsciiCmpi(LPSTR str1,LPSTR str2);

PS1W32API LPSTR __stdcall SSBT_AsciiCpy(LPSTR strdest,LPCSTR strsrc);

PS1W32API INT __stdcall SSBT_AsciiFromNibble(CHAR ch);

PS1W32API LPSTR __stdcall SSBT_AsciiFromVal(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

PS1W32API LPSTR __stdcall SSBT_AsciiInc(LPSTR asciistr);

PS1W32API LPSTR __stdcall SSBT_AsciiIncc(LPSTR asciistr);

PS1W32API BOOL __stdcall SSBT_AsciiIsLower(INT value);

PS1W32API BOOL __stdcall SSBT_AsciiIsRadix(LPCSTR asciistr,INT radixval);

PS1W32API INT __stdcall SSBT_AsciiLenVal(INT numbits,INT radixval);

PS1W32API INT __stdcall SSBT_AsciiToUpper(INT value);

PS1W32API ULONG __stdcall SSBT_AsciiToVal(LPCSTR asciistr,INT radixval);

PS1W32API VOID __stdcall SSBT_AsciiTrimLead(LPSTR buf);

PS1W32API VOID __stdcall SSBT_AsciiTrimTrail(LPSTR buf);

PS1W32API VOID __stdcall SSBT_AsciiTrimZero(LPSTR buf);

PS1W32API ERRVAL __stdcall SSBT_CardCloseAll(VOID);

PS1W32API ERRVAL __stdcall SSBT_CardGetParam(LPSTR cardstr,LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,HCARD handleval);

PS1W32API VOID __stdcall SSBT_CardInit(VOID);

PS1W32API HCARD __stdcall SSBT_CardOpenEx(LPCSTR cardname,INT memval,INT ioval,INT irqval);

PS1W32API HCARD __stdcall SSBT_CardOpenExx(LPCSTR cardname,INT memval,INT ioval,INT irqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

PS1W32API ERRVAL __stdcall SSBT_Check(HCARD handleval);

PS1W32API VOID __stdcall SSBT_ClrInt(HCARD handleval);

PS1W32API BYTE __stdcall SSBT_Config(BYTE regval,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_ConfigInt(BYTE regval,LPVOID newhandler,HCARD handleval);

PS1W32API ULONG __stdcall SSBT_Div(ULONG diva,ULONG divb);

PS1W32API LPCSTR __stdcall SSBT_ErrDesc(INT errval);

PS1W32API LPCSTR __stdcall SSBT_ErrDescStr(INT errval);

PS1W32API LPCSTR __stdcall SSBT_ErrName(INT errval);

PS1W32API USHORT __stdcall SSBT_GetHigh(ULONG val);

PS1W32API USHORT __stdcall SSBT_GetLow(ULONG val);

PS1W32API USHORT __stdcall SSBT_GetOff(LPVOID valptr);

PS1W32API USHORT __stdcall SSBT_GetSeg(LPVOID valptr);

PS1W32API ERRVAL __stdcall SSBT_HandleClose(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_HandleDel(HCARD handleval);

PS1W32API HCARD __stdcall SSBT_HandleIns(LPCSTR cardname,INT memval,INT ioval,INT irqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

PS1W32API BOOL __stdcall SSBT_HandleOkay(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_HandleOpen(LPCSTR cardname,INT memval,INT ioval,INT irqval,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_HandleVer(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_IntInstall(LPVOID hEvent,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_IntUninstall(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernBegin(LPVOID *vxdptr,LPSTR cardstr,INT memval,INT ioval,INT irqval,LPCSTR cardname);

PS1W32API ERRVAL __stdcall SSBT_KernEnd(LPVOID vxdptr);

PS1W32API ERRVAL __stdcall SSBT_KernIntClear(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIntInstall(LPVOID hEvent,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIntStatus(LPINT valueptr,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIntUninstall(HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIORdB(LPBYTE valueptr,ULONG addrval,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernIOWrB(BYTE value,ULONG addrval,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMCopyB(LPVOID destptr,LPVOID srcptr,USHORT countval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdB(LPBYTE valueptr,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdL(LPULONG valueptr,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdsB(LPBYTE bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMRdW(LPUSHORT valueptr,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrB(BYTE value,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrsB(LPBYTE bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrsL(LPULONG bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrsW(LPUSHORT bufptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernMEMWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

PS1W32API ERRVAL __stdcall SSBT_KernStatus(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

PS1W32API ULONG __stdcall SSBT_MakeLong(USHORT valh,USHORT vall);

PS1W32API LPVOID __stdcall SSBT_MakePtr(USHORT valh,USHORT vall);

PS1W32API ULONG __stdcall SSBT_Mask(ULONG dataval,USHORT cntval);

PS1W32API VOID __stdcall SSBT_MemRdS(LPVOID bufptr,USHORT offval,USHORT cntval,HCARD handleval);

PS1W32API VOID __stdcall SSBT_MemWrS(LPVOID bufptr,USHORT offval,USHORT cntval,HCARD handleval);

PS1W32API ULONG __stdcall SSBT_Mod(ULONG moda,ULONG modb);

PS1W32API VOID __stdcall SSBT_MonMemRdS(LPVOID bufptr,USHORT offval,USHORT cntval,HCARD handleval);

PS1W32API VOID __stdcall SSBT_MonMemWrS(LPVOID bufptr,USHORT offval,USHORT cntval,HCARD handleval);

PS1W32API USHORT __stdcall SSBT_MonMsg(LPULONG dwdptr,HCARD handleval);

PS1W32API ULONG __stdcall SSBT_Mul(ULONG mula,ULONG mulb);

PS1W32API BYTE __stdcall SSBT_PortRd(INT addrval,HCARD handleval);

PS1W32API VOID __stdcall SSBT_PortWr(BYTE value,INT addrval,HCARD handleval);