documentacion/obtenida/ARINC 429/driver and software/PC-SSB-1/WIN95/PS1W32VB.BAS


Public Declare Function SSBT_CardClose Lib "PS1W32.DLL" Alias "_SSBT_CardClose@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_CardOpen Lib "PS1W32.DLL" Alias "_SSBT_CardOpen@12" (ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long) As Long
Public Declare Function SSBT_AsciiCat Lib "PS1W32.DLL" Alias "_SSBT_AsciiCat@8" (ByVal strdest As String, ByVal strsrc As String) As String
Public Declare Function SSBT_AsciiCmpi Lib "PS1W32.DLL" Alias "_SSBT_AsciiCmpi@8" (ByVal str1 As String, ByVal str2 As String) As Long
Public Declare Function SSBT_AsciiCpy Lib "PS1W32.DLL" Alias "_SSBT_AsciiCpy@8" (ByVal strdest As String, ByVal strsrc As String) As String
Public Declare Function SSBT_AsciiFromNibble Lib "PS1W32.DLL" Alias "_SSBT_AsciiFromNibble@4" (ByVal ch As Byte) As Long
Public Declare Function SSBT_AsciiFromVal Lib "PS1W32.DLL" Alias "_SSBT_AsciiFromVal@16" (ByVal value As Long, ByVal asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As String
Public Declare Function SSBT_AsciiInc Lib "PS1W32.DLL" Alias "_SSBT_AsciiInc@4" (ByVal asciistr As String) As String
Public Declare Function SSBT_AsciiIncc Lib "PS1W32.DLL" Alias "_SSBT_AsciiIncc@4" (ByVal asciistr As String) As String
Public Declare Function SSBT_AsciiIsLower Lib "PS1W32.DLL" Alias "_SSBT_AsciiIsLower@4" (ByVal value As Long) As Long
Public Declare Function SSBT_AsciiIsRadix Lib "PS1W32.DLL" Alias "_SSBT_AsciiIsRadix@8" (ByVal asciistr As String, ByVal radixval As Long) As Long
Public Declare Function SSBT_AsciiLenVal Lib "PS1W32.DLL" Alias "_SSBT_AsciiLenVal@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function SSBT_AsciiToUpper Lib "PS1W32.DLL" Alias "_SSBT_AsciiToUpper@4" (ByVal value As Long) As Long
Public Declare Function SSBT_AsciiToVal Lib "PS1W32.DLL" Alias "_SSBT_AsciiToVal@8" (ByVal asciistr As String, ByVal radixval As Long) As Long
Public Declare Sub SSBT_AsciiTrimLead Lib "PS1W32.DLL" Alias "_SSBT_AsciiTrimLead@4" (ByVal buf As String)
Public Declare Sub SSBT_AsciiTrimTrail Lib "PS1W32.DLL" Alias "_SSBT_AsciiTrimTrail@4" (ByVal buf As String)
Public Declare Sub SSBT_AsciiTrimZero Lib "PS1W32.DLL" Alias "_SSBT_AsciiTrimZero@4" (ByVal buf As String)
Public Declare Function SSBT_CardCloseAll Lib "PS1W32.DLL" Alias "_SSBT_CardCloseAll@0" () As Long
Public Declare Function SSBT_CardGetParam Lib "PS1W32.DLL" Alias "_SSBT_CardGetParam@20" (ByVal cardstr As String, ByRef memval As Integer, ByRef ioval As Integer, ByRef irqval As Integer, ByVal handleval As Long) As Long
Public Declare Sub SSBT_CardInit Lib "PS1W32.DLL" Alias "_SSBT_CardInit@0" ()
Public Declare Function SSBT_CardOpenEx Lib "PS1W32.DLL" Alias "_SSBT_CardOpenEx@16" (ByVal cardname As String, ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long) As Long
Public Declare Function SSBT_CardOpenExx Lib "PS1W32.DLL" Alias "_SSBT_CardOpenExx@24" (ByVal cardname As String, ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long, ByRef hAppWnd As Long, ByVal uiRemovalMsg As Integer) As Long
Public Declare Function SSBT_Check Lib "PS1W32.DLL" Alias "_SSBT_Check@4" (ByVal handleval As Long) As Long
Public Declare Sub SSBT_ClrInt Lib "PS1W32.DLL" Alias "_SSBT_ClrInt@4" (ByVal handleval As Long)
Public Declare Function SSBT_Config Lib "PS1W32.DLL" Alias "_SSBT_Config@8" (ByVal regval As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_ConfigInt Lib "PS1W32.DLL" Alias "_SSBT_ConfigInt@12" (ByVal regval As Long, ByRef newhandler As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_Div Lib "PS1W32.DLL" Alias "_SSBT_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function SSBT_ErrDesc Lib "PS1W32.DLL" Alias "_SSBT_ErrDesc@4" (ByVal errval As Long) As String
Public Declare Function SSBT_ErrDescStr Lib "PS1W32.DLL" Alias "_SSBT_ErrDescStr@4" (ByVal errval As Long) As String
Public Declare Function SSBT_ErrName Lib "PS1W32.DLL" Alias "_SSBT_ErrName@4" (ByVal errval As Long) As String
Public Declare Function SSBT_GetHigh Lib "PS1W32.DLL" Alias "_SSBT_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function SSBT_GetLow Lib "PS1W32.DLL" Alias "_SSBT_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function SSBT_GetOff Lib "PS1W32.DLL" Alias "_SSBT_GetOff@4" (ByRef valptr As Long) As Integer
Public Declare Function SSBT_GetSeg Lib "PS1W32.DLL" Alias "_SSBT_GetSeg@4" (ByRef valptr As Long) As Integer
Public Declare Function SSBT_HandleClose Lib "PS1W32.DLL" Alias "_SSBT_HandleClose@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_HandleDel Lib "PS1W32.DLL" Alias "_SSBT_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_HandleIns Lib "PS1W32.DLL" Alias "_SSBT_HandleIns@24" (ByVal cardname As String, ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long, ByRef hAppWnd As Long, ByVal uiRemovalMsg As Integer) As Long
Public Declare Function SSBT_HandleOkay Lib "PS1W32.DLL" Alias "_SSBT_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_HandleOpen Lib "PS1W32.DLL" Alias "_SSBT_HandleOpen@20" (ByVal cardname As String, ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_HandleVer Lib "PS1W32.DLL" Alias "_SSBT_HandleVer@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_IntInstall Lib "PS1W32.DLL" Alias "_SSBT_IntInstall@8" (ByRef hEvent As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_IntUninstall Lib "PS1W32.DLL" Alias "_SSBT_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_KernBegin Lib "PS1W32.DLL" Alias "_SSBT_KernBegin@24" (ByVal vxdptr As Long, ByVal cardstr As String, ByVal memval As Long, ByVal ioval As Long, ByVal irqval As Long, ByVal cardname As String) As Long
Public Declare Function SSBT_KernEnd Lib "PS1W32.DLL" Alias "_SSBT_KernEnd@4" (ByRef vxdptr As Long) As Long
Public Declare Function SSBT_KernIntClear Lib "PS1W32.DLL" Alias "_SSBT_KernIntClear@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIntInstall Lib "PS1W32.DLL" Alias "_SSBT_KernIntInstall@8" (ByRef hEvent As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIntParam Lib "PS1W32.DLL" Alias "_SSBT_KernIntParam@32" (ByVal clraddr As Long, ByVal clrwidth As Long, ByVal clrvalue As Long, ByVal stataddr As Long, ByVal statwidth As Long, ByVal statvalue As Long, ByVal statmask As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIntStatus Lib "PS1W32.DLL" Alias "_SSBT_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIntUninstall Lib "PS1W32.DLL" Alias "_SSBT_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIORdB Lib "PS1W32.DLL" Alias "_SSBT_KernIORdB@12" (ByRef valueptr As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernIOWrB Lib "PS1W32.DLL" Alias "_SSBT_KernIOWrB@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMCopyB Lib "PS1W32.DLL" Alias "_SSBT_KernMEMCopyB@12" (ByRef destptr As Long, ByRef srcptr As Long, ByVal countval As Integer) As Long
Public Declare Function SSBT_KernMEMFillW Lib "PS1W32.DLL" Alias "_SSBT_KernMEMFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdB Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdB@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdL Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdsB Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdsB@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdsL Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdsW Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMRdW Lib "PS1W32.DLL" Alias "_SSBT_KernMEMRdW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrB Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrB@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrL Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrsB Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrsB@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrsL Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrsW Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernMEMWrW Lib "PS1W32.DLL" Alias "_SSBT_KernMEMWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_KernStatus Lib "PS1W32.DLL" Alias "_SSBT_KernStatus@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function SSBT_MakeLong Lib "PS1W32.DLL" Alias "_SSBT_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function SSBT_MakePtr Lib "PS1W32.DLL" Alias "_SSBT_MakePtr@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function SSBT_Mask Lib "PS1W32.DLL" Alias "_SSBT_Mask@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Sub SSBT_MemRdS Lib "PS1W32.DLL" Alias "_SSBT_MemRdS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Sub SSBT_MemWrS Lib "PS1W32.DLL" Alias "_SSBT_MemWrS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Function SSBT_Mod Lib "PS1W32.DLL" Alias "_SSBT_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Sub SSBT_MonMemRdS Lib "PS1W32.DLL" Alias "_SSBT_MonMemRdS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Sub SSBT_MonMemWrS Lib "PS1W32.DLL" Alias "_SSBT_MonMemWrS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Function SSBT_MonMsg Lib "PS1W32.DLL" Alias "_SSBT_MonMsg@8" (ByRef dwdptr As Long, ByVal handleval As Long) As Integer
Public Declare Function SSBT_Mul Lib "PS1W32.DLL" Alias "_SSBT_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function SSBT_PortRd Lib "PS1W32.DLL" Alias "_SSBT_PortRd@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub SSBT_PortWr Lib "PS1W32.DLL" Alias "_SSBT_PortWr@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long)
